[gd_scene load_steps=15 format=3 uid="uid://cjveu27ju6scw"]

[ext_resource type="Script" path="res://games/snake/snake_color_selection.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dm1fumx6l4gh2" path="res://games/snake/color_schemes/rainbow.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dy6sa36o76wb8" path="res://games/snake/color_schemes/matchstick.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cifw8thcmigyi" path="res://games/snake/color_schemes/firefly.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cr7yhm336awj2" path="res://games/snake/color_schemes/classic.png" id="5"]
[ext_resource type="FontFile" uid="uid://bdag20ovcrxb8" path="res://shared/fonts/press_start2p/press_start2p_regular.ttf" id="6"]

[sub_resource type="StyleBoxEmpty" id="9"]

[sub_resource type="StyleBoxFlat" id="7"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="8"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="10"]

[sub_resource type="StyleBoxEmpty" id="11"]

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="6"]
default_font = SubResource("5")
Button/styles/disabled = SubResource("9")
Button/styles/focus = SubResource("7")
Button/styles/hover = SubResource("8")
Button/styles/normal = SubResource("10")
Button/styles/pressed = SubResource("11")
MarginContainer/constants/margin_bottom = 8
MarginContainer/constants/margin_left = 8
MarginContainer/constants/margin_right = 8
MarginContainer/constants/margin_top = 8
PanelContainer/styles/panel = SubResource("4")

[node name="SnakeColorSelection" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource("6")
color = Color(0.2, 0.2, 0.501961, 1)
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "T_SNAKE_COLOR_SCHEME"

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "T_SNAKE_COLOR_CLASSIC"

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("5")

[node name="ButtonClassic" type="Button" parent="CenterContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "T_SNAKE_COLOR_FIREFLY"

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4")

[node name="ButtonFirefly" type="Button" parent="CenterContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer3/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "T_SNAKE_COLOR_MATCHSTICK"

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3")

[node name="ButtonMatchstick" type="Button" parent="CenterContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="PanelContainer4" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/PanelContainer4"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer4/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer4/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "T_SNAKE_COLOR_RAINBOW"

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/PanelContainer4/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2")

[node name="ButtonRainbow" type="Button" parent="CenterContainer/VBoxContainer/PanelContainer4"]
layout_mode = 2

[connection signal="pressed" from="CenterContainer/VBoxContainer/PanelContainer/ButtonClassic" to="." method="_on_ButtonClassic_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PanelContainer2/ButtonFirefly" to="." method="_on_ButtonFirefly_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PanelContainer3/ButtonMatchstick" to="." method="_on_ButtonMatchstick_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PanelContainer4/ButtonRainbow" to="." method="_on_ButtonRainbow_pressed"]
